--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -13,6 +13,27 @@
         display: flex;
         flex-direction: column;
 
+        .log-message {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            .name {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 5px;
+                font-size: 12px;
+
+                .date {
+                    border: 1px solid gray;
+                    border-radius: 10px;
+                    padding: 5px;
+                }
+            }
+        }
+
         .message {
             display: flex;
             align-items: center;
