--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/mainInformation.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/mainInformation.scss
@@ -39,4 +39,74 @@
             display: flex;
         }
     }
+
+    .chat-list {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        top: -35%;
+        left: 70%;
+        min-width: 350px;
+        padding: 20px;
+        border: 2px solid green;
+        border-radius: 20px;
+        background: white;
+        z-index: 10;
+
+        svg {
+            cursor: pointer;
+        }
+
+        &__close {
+            display: flex;
+            justify-content: end;
+            width: 100%;
+            margin: -10px;
+        }
+
+        &__chats {
+            ul {
+                padding: 0;
+                overflow: auto;
+                max-height: 230px;
+
+                li {
+                    margin: 0 20px;
+                }
+            }
+        }
+
+        .title {
+            display: flex;
+            justify-content: space-around;
+            gap: 25px;
+        }
+
+        .chat {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 50px;
+            box-shadow: 3px 3px 3px 3px gray;
+            border: 2px solid black;
+            border-radius: 20px;
+            padding: 5px;
+            margin: 10px 0;
+            font-size: 12px;
+
+            .sent {
+                border: 2px solid gray;
+                border-radius: 15px;
+                padding: 5px 15px;
+                opacity: 0.5;
+                cursor: default;
+            }
+
+            .btn-shadow {
+                box-shadow: 0 0 0 0;
+            }
+        }
+    }
 }
