--- a/src/CombatAnalysis.App/Views/SettingsView.xaml
+++ b/src/CombatAnalysis.App/Views/SettingsView.xaml
@@ -55,7 +55,7 @@
             </StackPanel>
 
             <StackPanel Grid.Row="1" Grid.Column="0" Margin="50 0">
-                <TextBlock Text="Logs location" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10"/>
+                <TextBlock Text="{loc:Loc LogsLocation}" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10"/>
                 <TextBlock Text="{Binding LogsLocation}" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10"/>
                 <Button Content="{loc:Loc ChangeLocationPath}" Click="SelectLocation" Width="125" FontSize="16" HorizontalAlignment="Left"
                     Margin="15 0" Style="{StaticResource showButton}" />
