Add Loading/Error status for Chats
Now users can see new Chat page status:
 - Loading: see information that page in loading status;
- Error: see that page can not loading (for some errors/issue) and can try Loading again.

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -84,6 +84,11 @@
         .group-chats, .personal-chats {
             display: none;
 
+            &__not-found {
+                opacity: 0.4;
+                text-align: center;
+            }
+
             &_active {
                 .last-message {
                     max-height: 20px;
