--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/user.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/user.scss
@@ -1,9 +1,17 @@
 .special-user {
     &__me, &__another {
+        .details {
+            opacity: 0.4;
+
+            &_active {
+                opacity: 1;
+            }
+        }
+
         .username {
             width: 100px;
             overflow-x: hidden;
-            cursor: default;
+            cursor: pointer;
         }
     }
 }
