Add new posts informations
Users can get informations about new posts on Feed and can see new posts (posts don't update automation)

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
@@ -59,5 +59,21 @@
 
     &__content {
         margin-left: 190px;
+
+        .new-posts {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            margin-top: -10px;
+            background: white;
+            z-index: 100;
+
+            &__content {
+                padding: 5px 10px;
+                cursor: pointer;
+                border: 1px solid gray;
+                border-radius: 10px;
+            }
+        }
     }
 }
