Add Video and Voice group chats
Users can start call in group chats and talking with another chat users via Voice and see users via Camera (Web version only)

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -30,6 +30,20 @@
                     gap: 10px;
                 }
 
+                &__menu {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 75px;
+
+                    .call_active {
+                        border: 2px solid gray;
+                        border-radius: 20px;
+                        padding: 5px;
+                        box-shadow: 2px 2px 2px 2px green;
+                    }
+                }
+
                 .name {
                     margin: 0 20px;
                     font-weight: bold;
