--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -65,6 +65,7 @@
                     width: 95%;
                     border-radius: 20px;
                     margin: 5px 0;
+                    border: 2px solid green;
                 }
             }
         }
