--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -17,15 +17,40 @@
             display: flex;
             gap: 10px;
 
-            .camera, .microphone {
-                width: 25px;
-                height: 25px;
-                margin: 10px;
-            }
+            .device {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 5px;
 
-            .camera:hover, .microphone:hover {
-                cursor: pointer;
-                transform: scale(1.1);
+                .device-toolbar {
+                    position: absolute;
+                    top: 7%;
+                    padding: 10px;
+                    border: 1px solid gray;
+                    background: white;
+                }
+
+                &__camera, &__microphone {
+                    width: 25px;
+                    height: 25px;
+                    margin: 10px;
+                }
+
+                &__settings {
+                    width: 15px;
+                    height: 15px;
+                }
+
+                &__camera:hover, &__microphone:hover {
+                    cursor: pointer;
+                    transform: scale(1.1);
+                }
+
+                &__settings:hover {
+                    cursor: pointer;
+                    transform: scale(1.25);
+                }
             }
         }
     }
@@ -46,7 +71,7 @@
             border-radius: 25px;
         }
 
-        .video-container {
+        .another-user-container {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -57,15 +82,31 @@
             gap: 5px;
             height: 540px;
 
-            .video {
+            .user {
                 display: flex;
                 justify-content: center;
+                width: 100%;
+                min-height: 30%;
+                height: auto;
 
                 .another {
-                    width: 95%;
-                    border-radius: 20px;
-                    margin: 5px 0;
-                    border: 2px solid green;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    height: 100%;
+                    border-radius: 15px;
+                    margin: 5px;
+                    border: 2px solid gray;
+
+                    &__username {
+                        text-align: center;
+                    }
+
+                    .information {
+                        display: flex;
+                        justify-content: space-around;
+                        align-items: center;
+                    }
                 }
             }
         }
