Fix minimazed call
Fix problem that user with already started call can start another call (from other chat) and don't have functionality to back to call

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/voiceChatMinimazed.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/voiceChatMinimazed.scss
@@ -19,6 +19,14 @@
         width: 225px;
     }
 
+    .back-to-call {
+        display: flex;
+        position: absolute;
+        align-items: center;
+        margin-left: 90px;
+        margin-top: 5px;
+    }
+
     .show, .hide {
         display: flex;
         align-items: center;
