--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -48,6 +48,12 @@
                         border-radius: 20px;
                         box-shadow: 2px 2px 2px 2px blue;
                     }
+
+                    .call-minimazed {
+                        padding: 10px;
+                        opacity: 0.2;
+                        cursor: default;
+                    }
                 }
 
                 .name {
