Add screen sharing
Now users can share your screen (only 1 person can do it in same time) in Voice chat

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -31,7 +31,7 @@
                     background: white;
                 }
 
-                &__camera, &__microphone {
+                &__screen, &__camera, &__microphone {
                     width: 25px;
                     height: 25px;
                     margin: 10px;
