Add inform about empty message
Add information when user try send empty message in chat that user Can not send empty empty message

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -65,6 +65,15 @@
                     border-radius: 10px;
                 }
             }
+
+            .empty-message {
+                display: none;
+
+                &_show {
+                    display: block;
+                    opacity: 0.5;
+                }
+            }
         }
     }
 
